# NASTRAN

./: .gitignore  .travis.yml  Makefile.am  Makefile.in  configure  configure.ac
alt/: cosdbcl.alt  cosddam.alt  cosdfva.alt  coshyd1.alt  coshyd2.alt  cosmfva.alt
debian/: changelog  control  copyright  install  nast-run.1  nastran.dirs  nastran.manpages
debian/patches/: nastran-main-script.diff  series  testbar-script.diff
man/: Makefile.in
mds/: .gitignore  Makefile  Makefile.am  Makefile.in  bckrec.f  bldpk.f  bpack.f  bufchk.f  bunpak.f  bunpk.f  chkfil.f  close.f  conmsg.f  corwds.f  cputim.f  defcor.f  dummy.f  emgsoc.f  endget.f  endgtb.f  endput.f  eof.f  exfort.f  fbsv.f  ff.f  filpos.f  fornum.f  forwrt.f  fwdrec.f  getstb.f  getstr.f  geturn.f  gino.f  ginoio.f  gnfiat.f  ibmopn.f  init.f  intpk.f  k2b.f  khrbcd.f  (+31 more)
mis/: .gitignore  Makefile  Makefile.am  Makefile.in  a42a8.f  a82int.f  adr.f  adri.f  adrprt.f  af.f  ais.f  akapm.f  alg.f  alg02.f  alg03.f  alg04.f  alg08.f  alg09.f  alg1.f  alg11.f  alg12.f  alg13.f  alg16.f  alg17.f  alg19.f  alg25.f  alg26.f  algan.f  algap.f  algar.f  algpb.f  algpo.f  algpr.f  allmat.f  amg.f  amgb1.f  amgb1a.f  amgb1b.f  amgb1c.f  amgb1s.f  (+1377 more)
modmis/: btstrp.f  dummy.f  mtrxo.f  numtyp.f  ofp.f  ofppnt.f  paraml.f  tabprt.f  wrtfmt.f  wrtmsg.f  xsem00.f  zzcore.f
nid/: Makefile.am  Makefile.in  d02022a.sh  d02023a.sh  d02024a.nid  d02024a.sh  d02025a.sh  d02026a.sh  d02027a.sh  d02032a.sh  d02033a.sh  d02034a.sh  d02035a.sh  d02036a.sh  d10011a.nid  d10021a.nid  d10022a.nid  d10023a.nid  d11011a.nid  t01191a.nid  t01201a.nid  t01211a.nid  t01221a.nid  t01231a.nid  t01241a.nid  t01301a.nid  t01311a.nid  t04021a.nid  t13021a.nid  t13022a.nid  testrunner.sh  windmill.sof
rf/: AERO10  AERO11  AERO9  DISP0  DISP1  DISP10  DISP11  DISP12  DISP13  DISP14  DISP15  DISP16  DISP17  DISP18  DISP19  DISP2  DISP3  DISP4  DISP5  DISP6  DISP7  DISP8  DISP9  HEAT1  HEAT3  HEAT9
test/: .gitignore  Makefile.am  Makefile.in  test_buckling_solid_shell_bar.sh  test_freq_solid_shell_bar.sh  test_mode_solid_shell_bar.sh  test_static_solid_shell_bar.sh  testbar.sh
