TESTS = d01000a.nid d01001a.nid d01002a.nid d01011a.nid d01011b.nid d01011c.nid \
d01012a.nid d01013a.nid d01014a.nid d01021a.nid d01021b.nid d01031a.nid \
d01032a.nid d01033a.nid d01034a.nid d01041a.nid d01051a.nid d01061a.nid \
d01062a.nid d01071a.nid d01081a.nid d01091a.nid d01092a.nid d01101a.nid \
d01111a.nid d01112a.nid d01121a.nid d01122a.nid d01131a.nid d01132a.nid \
d01133a.nid d01141a.nid d01151a.nid d01161a.nid d01171a.nid d02011a.nid \
d02021a.nid d02022a.nid d02023a.nid d02024a.nid d02025a.nid d02026a.nid \
d02027a.nid d02031a.nid d02032a.nid d02033a.nid d02034a.nid d02035a.nid \
d02036a.nid d03011a.nid d03012a.nid d03013a.nid d03014a.nid d03021a.nid \
d03031a.nid d03041a.nid d03051a.nid d03061a.nid d03071a.nid d03081a.nid \
d03082a.nid d03083a.nid d04011a.nid d05011a.nid d05021a.nid d06011a.nid \
d07011a.nid d07012a.nid d07021a.nid d07022a.nid d08011a.nid d08012a.nid \
d08013a.nid d08014a.nid d09011a.nid d09021a.nid d09022a.nid d09031a.nid \
d09041a.nid d10011a.nid d10021a.nid d10022a.nid d10023a.nid d11011a.nid \
d11011b.nid d11021a.nid d11022a.nid d11031a.nid d11032a.nid d12011a.nid \
d13011a.nid d14011a.nid d15011a.nid t00001a.nid t01181a.nid t01191a.nid \
t01201a.nid t01211a.nid t01221a.nid t01231a.nid t01241a.nid t01251a.nid \
t01261a.nid t01271a.nid t01281a.nid t01291a.nid t01301a.nid t01311a.nid \
t01321a.nid t01331a.nid t01341a.nid t03091a.nid t03101a.nid t03111a.nid \
t03111b.nid t03121a.nid t03121b.nid t03121c.nid t03131a.nid t04021a.nid \
t04021b.nid t05031a.nid t08021a.nid t08022a.nid t08031a.nid t09051a.nid \
t09061a.nid t09071a.nid t13021a.nid t13022a.nid t16011a.nid t17011a.nid

XFAIL_TESTS = d01011b.nid d01011c.nid d01021b.nid d01151a.nid d01161a.nid \
d02022a.nid d02023a.nid d02024a.nid d02025a.nid \
d02026a.nid d02027a.nid d02032a.nid d02033a.nid \
d02034a.nid d02035a.nid d02036a.nid d03011a.nid d03012a.nid \
d03013a.nid d03014a.nid d03041a.nid d05011a.nid d11011b.nid \
d12011a.nid t00001a.nid t01271a.nid t03111a.nid t03111b.nid \
t03121a.nid t03121b.nid t03121c.nid t03131a.nid t04021b.nid \
t08021a.nid t08022a.nid t08031a.nid t09071a.nid t16011a.nid 

TEST_EXTENSIONS = .nid
NID_LOG_COMPILER = ./testrunner.sh

clean-local:
	-rm -f *.out *.in12 *.out11 *.nptp *.plt *.pnh *.log *.sof1 *.sof2 *.15 *.16 *.76
